# ocaml-rust-starter

./: .gitignore  Cargo.toml  README.md  build.rs  dune-project  init.sh  ocaml-rust-starter.opam
.github/workflows/: ocaml.yml
src/: dune  lib.rs  ocaml_rust_starter.ml  ocaml_rust_starter.mli
test/: dune  test.ml
