[package]
name = "ocaml-rust-starter"
version = "0.1.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ocaml = {version = "^1.0.0-beta"}

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}

# Or use the development version:
# ocaml = {git = "git://github.com/zshipko/ocaml-rs"}
