(rule
 (targets libocaml_rust_starter.a)
 (deps (glob_files *.rs))
 (action
  (progn
   (run cargo build --target-dir %{project_root}/../../target --release)
   (run mv %{project_root}/../../target/release/libocaml_rust_starter.a libocaml_rust_starter.a))))

(library
 (name ocaml_rust_starter)
 (public_name ocaml-rust-starter)
 (foreign_archives ocaml_rust_starter)
 (c_library_flags
  (-lpthread -lc -lm)))
